# artscii

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: img_manager.cpp.19BD7188A36DA0FA.idx  img_manager.cpp.814852FE13767E60.idx  img_manager.h.50FB0FC7D7FCB05D.idx  img_manager.h.C03F35B5DD1B52A9.idx  main.cpp.4EEAC159D71AE4BE.idx  main.cpp.ACBA25A02EA046C7.idx  png_decoder.cpp.16AB6C802BD39779.idx  png_decoder.cpp.D5178FD20E57A15E.idx  png_decoder.h.2A4F5A187B53A64A.idx  png_decoder.h.A24A09AA91EFA9D5.idx
include/: artscii_processor.h  img_manager.h  png_decoder.h
mac_os/: README.md  artscii  install_script.sh
src/: artscii_processor.cpp  img_manager.cpp  main.cpp  png_decoder.cpp
